name:                PSO
version:             0.1.0.0
synopsis:            Particle swarm optimization module
description:        
     
license:             BSD3
license-file:        LICENSE
author:              Brian Shourd
maintainer:          brian.shourd@gmail.com
stability:           alpha
homepage:            https://github.com/brianshourd/haskell-ParticleSwarmOptimization
copyright:           2013
-- category:            
build-type:          Simple
cabal-version:       >=1.8
source-repository head
    type:            git
    location:        git://github.com/brianshourd/haskell-ParticleSwarmOptimization

library
  exposed-modules:     PSO
  build-depends:       base ==4.5.*, random ==1.0.*
